--- a/module2/dotnet/readserial_nodevice/readserial_nodevice.csproj
+++ b/module2/dotnet/readserial_nodevice/readserial_nodevice.csproj
@@ -5,6 +5,6 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.6.0-preview-001" />
+    <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.18.0" />
   </ItemGroup>
 </Project>
